# linkedin_top_profile

./: README.md  check.ps1  pyproject.toml  test.yml
linkedin_top_profile/: paths.py  wikimedia.py
tests/: test_wikimedia.py
